[package]
name = "threatrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
thiserror = "1.0"
pulldown-cmark = "0.10"
pulldown-cmark-to-cmark = "13.0"
serde = {version="1.0", features=["derive"]}
serde_yaml = "0.9"
serde_json = "1.0"

[[bin]]
name = "threats_pytm"
